Step1 Add Model Add Repository Add Parser

--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -1,1 +1,5 @@
 spring.application.name=CBRService
+spring.cassandra.keyspace-name=cbr_keyspace
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.local-datacenter=datacenter1
